# Property-Intelligence-Engine

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: ai-and-retrieval.md  api.md  architecture.md  configuration.md  operations.md  scoring.md  security.md  testing-and-evaluation.md
docs/adr/: 0001-hybrid-deterministic-scoring.md  0002-provider-ports.md  0003-native-async-qdrant.md  0004-stateless-synchronous-api.md  0005-post-generation-claim-validation.md  README.md
examples/: listing_request.json  listing_response.deterministic.json
src/property_intelligence/: __init__.py  bootstrap.py
src/property_intelligence/application/: __init__.py  exceptions.py  ports.py  use_cases.py
src/property_intelligence/domain/: __init__.py  analysis.py  claim_validation.py  models.py  normalization.py
src/property_intelligence/infrastructure/: __init__.py  config.py
src/property_intelligence/infrastructure/ai/: __init__.py  embeddings.py  fallback.py  generator.py  schemas.py
src/property_intelligence/infrastructure/knowledge/: __init__.py  cli.py  corpus.py  qdrant.py  retriever.py  static.py
src/property_intelligence/infrastructure/knowledge/data/: listing_guidance.v1.json
src/property_intelligence/interfaces/: __init__.py
src/property_intelligence/interfaces/api/: __init__.py  auth.py  context.py  dependencies.py  errors.py  middleware.py  routes.py  schemas.py
tests/: __init__.py
tests/architecture/: test_dependency_rules.py
tests/evaluation/: listing_cases.json  test_live_openai.py  test_scoring_regression.py
tests/integration/: test_api.py  test_app_smoke.py  test_qdrant_adapter.py
tests/unit/: test_ai_adapters.py  test_analysis_engine.py  test_bootstrap_and_ai_edges.py  test_claim_validation.py  test_config.py  test_corpus_sync.py  test_domain_model_bounds.py  test_knowledge_cli.py  test_retriever_bounds.py  test_schemas.py  test_use_cases.py
