[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "property-intelligence-engine"
version = "0.1.0"
description = "Provider-neutral AI analysis for short-term rental listings"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
  { name = "Miguel Angel Sierra Hayer", email = "91997685+Miguesh@users.noreply.github.com" },
]
dependencies = [
  "fastapi>=0.139.2,<0.140.0",
  "uvicorn[standard]>=0.51.0,<0.52.0",
  "pydantic>=2.13.4,<3.0.0",
  "pydantic-settings>=2.14.2,<3.0.0",
  "langchain>=1.3.14,<2.0.0",
  "langchain-openai>=1.3.5,<2.0.0",
  "qdrant-client>=1.18.0,<2.0.0",
  "openai>=2.46.0,<3.0.0",
  "sentry-sdk[fastapi]>=2.66.0,<3.0.0",
  "httpx>=0.28.1,<0.29.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1.1,<10.0.0",
  "pytest-asyncio>=1.4.0,<2.0.0",
  "pytest-cov>=7.1.0,<8.0.0",
  "httpx2>=2.7.0,<3.0.0",
  "ruff>=0.15.22,<0.16.0",
  "mypy>=2.3.0,<3.0.0",
]

[project.scripts]
pie-ingest = "property_intelligence.infrastructure.knowledge.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"property_intelligence.infrastructure.knowledge" = ["data/*.json"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: tests that exercise infrastructure adapters",
  "live: tests that require external credentials or services",
]

[tool.coverage.run]
branch = true
source = ["property_intelligence"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
exclude_also = [
  'if TYPE_CHECKING:',
  'if __name__ == .__main__.:',
  '\.\.\.',
  'raise NotImplementedError',
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC", "SIM"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["property_intelligence"]
